discussion/kv_engine/139387/139387_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

foobar

Change-Id: I3497ad15d2f0e15585eb11ae3b7634eedb477627

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-11-02 14:39:09.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-11-02 14:43:44.000000000
Message: 
Patch Set 1: Code-Review-2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-02 16:04:20.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5390/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-dump.cc:210:5: error: no matching function for call to "replay" [clang-diagnostic-error]
    replay(
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1341:20: note: candidate function not viable: requires at most 5 arguments, but 6 were provided
couchstore_error_t replay(Db& source,
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-dump.cc:261:16: error: no matching function for call to "compact" [clang-diagnostic-error]
    auto err = compact(
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1322:20: note: candidate function not viable: requires at most 10 arguments, but 13 were provided
couchstore_error_t compact(Db& source,
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1260:20: note: candidate function not viable: requires at most 7 arguments, but 13 were provided
couchstore_error_t compact(Db& source,
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1741:13: error: too many arguments to function call, expected at most 5, have 6 [clang-diagnostic-error]
            [&on_disk_prepares](Db& compacted) {
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1340:1: note: "replay" declared here
LIBCOUCHSTORE_API
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/couchstore/include/libcouchstore/visibility.h:15:33: note: expanded from macro "LIBCOUCHSTORE_API"
#      define LIBCOUCHSTORE_API __attribute__((visibility("default")))
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5390/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-dump.cc:210:5:
error: no matching function for call to "replay" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5390/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27186/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1741:13:
error: too many arguments to function call, expected at most 5, have 6
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27186/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31483/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-dump.cc(124): error C2672: "std::max": no matching overloaded function found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31483/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7038/ : FAILURE

Compile error at [2020-11-02T15:28:36.504Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1741:13:
error: too many arguments to function call, expected at most 5, have 6
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7038/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6745/ : FAILURE

Compile error at [2020-11-02T15:38:43.973Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-dump.cc:245:14:
error: could not convert ?<lambda closure object>manual_main()::<lambda(Db&, Db&, const DocInfo*, const DocInfo*)>{on_disk_prepares}? from ?manual_main()::<lambda(Db&, Db&, const DocInfo*, const DocInfo*)>? to ?PrecommitHook {aka std::function<couchstore_error_t(Db&)>}?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6745/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14670/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5812/ : FAILURE

Compile error at [2020-11-02T14:53:56.595Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:50:10:
fatal error: "sys/sendfile.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5812/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6869/ : FAILURE

Compile error at [2020-11-02T15:42:48.719Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1763:14:
error: could not convert ?<lambda closure object>CouchKVStore::tryToCatchUpDbFile(Db&, Db&, std::unique_lock<std::mutex>&, bool, uint64_t&, Vbid)::<lambda(Db&, Db&, const DocInfo*, const DocInfo*)>{(* & on_disk_prepares)}? from ?CouchKVStore::tryToCatchUpDbFile(Db&, Db&, std::unique_lock<std::mutex>&, bool, uint64_t&, Vbid)::<lambda(Db&, Db&, const DocInfo*, const DocInfo*)>? to ?PrecommitHook {aka std::function<couchstore_error_t(Db&)>}?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6869/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3919/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-11-04 08:35:21.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
